--- a/azure/IoTGateway/IoTGateway/MainPage.xaml
+++ b/azure/IoTGateway/IoTGateway/MainPage.xaml
@@ -5,11 +5,48 @@
     xmlns:local="using:IoTGateway"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    Loaded="Page_Loaded">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <StackPanel Orientation="Vertical">
-            <Button x:Name="_sendButton" Content="send" Click="_sendButton_Click"/>
+            <StackPanel.Resources>
+                <Style TargetType="TextBlock">
+                    <Setter Property="HorizontalAlignment" Value="Left"/>
+                    <Setter Property="VerticalAlignment" Value="Top"/>
+                    <Setter Property="Width" Value="200"/>
+                    <Setter Property="FontSize" Value="30"/>
+                </Style>
+            </StackPanel.Resources>
+            <StackPanel Orientation="Vertical" Margin="0,30,0,0">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="X Axis:"/>
+                    <TextBlock x:Name="txtXAxis" Text="{Binding XAxis}"/>
+                    <!--<TextBlock x:Name="_txtXAxis"/>-->
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Y Axis:"/>
+                    <TextBlock x:Name="txtYAxis" Text="{Binding YAxis}"/>
+                    <!--<TextBlock x:Name="_txtYAxis"/>-->
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Z Axis:"/>
+                    <TextBlock x:Name="txtZAxis" Text="{Binding ZAxis}"/>
+                    <!--<TextBlock x:Name="_txtZAxis"/>-->
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Latitude:"/>
+                    <TextBlock x:Name="txtLatitude" Text="{Binding Latitude}"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Longitude:"/>
+                    <TextBlock x:Name="txtLongitude" Text="{Binding Longitude}"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Receive:"/>
+                    <TextBlock Text="{Binding MessageFromCloud}" Width="400"/>
+                </StackPanel>
+            </StackPanel>
         </StackPanel>
     </Grid>
 </Page>
