--- a/SIoTGateway/SensorModuleSimulator/MainPage.xaml
+++ b/SIoTGateway/SensorModuleSimulator/MainPage.xaml
@@ -17,6 +17,9 @@
                     <Setter Property="Width" Value="600"/>
                     <Setter Property="FontSize" Value="30"/>
                 </Style>
+                <Style TargetType="Button">
+                    <Setter Property="FontSize" Value="30"/>
+                </Style>
             </StackPanel.Resources>
             <StackPanel Orientation="Vertical" Margin="0,30,0,0">
                 <StackPanel Orientation="Horizontal">
