本番Azureに繋がるので注意 受信データを画面に表示できるようにした

--- a/SIoTGateway/Main/MainPage.xaml
+++ b/SIoTGateway/Main/MainPage.xaml
@@ -14,6 +14,7 @@
                 <Button x:Name="_sensor_attach" Content="センサー基板1アタッチ" Click="_sensor_attach_Click"/>
             </StackPanel>
             <TextBlock Text="{Binding SelfIP}" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            <TextBlock Text="{Binding RecivedTelemetryData}"/>
         </StackPanel>
     </Grid>
 </Page>
