--- a/SIoTGateway/Main/MainPage.xaml
+++ b/SIoTGateway/Main/MainPage.xaml
@@ -15,6 +15,7 @@
             </StackPanel>
             <TextBlock Text="{Binding SelfIP}" HorizontalAlignment="Left" VerticalAlignment="Top"/>
             <TextBlock Text="{Binding RecivedTelemetryData}"/>
+            <TextBlock Text="{Binding XBeeStatus}"/>
         </StackPanel>
     </Grid>
 </Page>
