--- a/SIoTServer/DeviceAdministration/Web/Views/Dashboard/_DashboardDevicePane.cshtml
+++ b/SIoTServer/DeviceAdministration/Web/Views/Dashboard/_DashboardDevicePane.cshtml
@@ -6,7 +6,7 @@
     string firstDeviceId = string.Empty;
 }
 
-<div class="dashboard_right_column">
+<div style="width:98%"> <!--class="dashboard_right_column" スタイルを外して画面いっぱいに広がるようにする-->
     <div class="dashboard_device_selection">
         <form class="dashboard_device_selection__selection_form" id="selectDevice">
             <h5 class="dashboard_device_selection__selection_form__label">@Strings.DeviceToView</h5>
