--- a/SIoTServer/DeviceAdministration/Web/Views/Dashboard/_TelemetryHistorySummary.cshtml
+++ b/SIoTServer/DeviceAdministration/Web/Views/Dashboard/_TelemetryHistorySummary.cshtml
@@ -1,5 +1,5 @@
 ﻿@using GlobalResources
-<div class="dashboard_telemetry_history_summary">
+<div hidden="hidden"><!--アラート履歴は不要class="dashboard_telemetry_history_summary"-->
     <div id="maxDeviceHumidityContainer" class="dashboard_telemetry_history_summary__dashboard_telemetry_history_gauge dashboard_telemetry_history_gauge--leftGauge">
         <h5 class="telemetry_summary_gauge_control__gauge_header" id="maxDeviceHumidityLabel">@Strings.MaxOfDevicesHumidity</h5>
         <div id="maxDevicehumidity" class="dashboard_telemetry_history_gauge__telemetry_summary_gauge_control"></div>
