--- a/SIoTServer/DeviceAdministration/Web/Views/Shared/_NavigationMenu.cshtml
+++ b/SIoTServer/DeviceAdministration/Web/Views/Shared/_NavigationMenu.cshtml
@@ -5,8 +5,9 @@
 
 @model List<Microsoft.Azure.Devices.Applications.RemoteMonitoring.DeviceAdmin.Web.Navigation.NavigationMenuItem>
 <nav class="navigation">
-    @foreach (var navigationMenuItem in Model)
+    @for(int i = 0; i < 2; i++) // 上2つのダッシュボードとデバイスだけ必要　他不要
     {
+        var navigationMenuItem = Model[i];
         if (navigationMenuItem.Selected)
         {
             <a class="navigation__link @navigationMenuItem.Class">@navigationMenuItem.Text</a>
@@ -14,7 +15,7 @@
         else
         {
             var multipleClasses = "navigation__link " + navigationMenuItem.Class;
-            @Html.ActionLink(navigationMenuItem.Text, navigationMenuItem.Action, navigationMenuItem.Controller, null, new { @class = multipleClasses })
+        @Html.ActionLink(navigationMenuItem.Text, navigationMenuItem.Action, navigationMenuItem.Controller, null, new { @class = multipleClasses })
         }
     }
 
