最後にテレメトリーを受け取った日時を取得する

--- a/SIoTServer/DeviceAdministration/Web/Views/Device/Index.cshtml
+++ b/SIoTServer/DeviceAdministration/Web/Views/Device/Index.cshtml
@@ -117,6 +117,7 @@
                         <th>SM</th>
                         <th>SN</th>
                         <th>Kind</th>
+                        <th>Last</th>
                         <th>@Strings.DeviceIdHeader</th><!----列の位置変更時はDeviceIndex.jsのonTableRowClickedも変更すること-->
                         @*---------------実験用標準センサープラットフォーム--------------*@
                         @*<th>@Strings.ManufactureHeader</th>
