--- a/SIoTServer/DeviceAdministration/Web/Views/DeviceCommand/Index.cshtml
+++ b/SIoTServer/DeviceAdministration/Web/Views/DeviceCommand/Index.cshtml
@@ -31,7 +31,7 @@
             Html.RenderPartial("_SendCommand", Model.SendCommandModel);
         }
 
-        <div class="command_container" id="content">
+        <div id="content" style="display:none"> <!--不要なので表示しない-->
 
             <h3>@Strings.CommandHistory</h3>
 
